selfhost/test/parser/typedecl_error_field_after_method.out
Error at %FILE_NAME%:4:3
Unexpected token 'identifier':
  |    b: Int
       ^